# sigflor-erp

./: .gitignore  CLAUDE.md  PROJETO_SIGFLOR_MVP_RH_STATUS.md  README.md  pyproject.toml
docs/: 03_estrutura_diretorios.md  04_dicionario_de_dados.md  05_fluxos_de_negocio.md
docs/03-core/: contratos.md  deficiencias.md  filiais.md  subcontratos.md
docs/04-rh/: cargos.md  funcionarios.md
docs/core/: auditoria_avancada.md  contatos.md  documentos.md  empresa.md  enderecos.md  filial.md  parametros_globais.md  pessoa_fisica.md  pessoa_juridica.md  projeto.md  usuarios.md
docs/explicacao/: arquitetura_software.md  regras_negocio_rh.md  visao_produto.md
docs/guias/: leia_me.md
docs/referencia/: dicionario_dados.md  mapa_diretorios.md
docs/referencia/alojamento/: alojamentos.md
docs/referencia/autenticacao/: 01_visao_geral.md  02_rbac_e_permissoes.md  03_usuarios.md
docs/referencia/core/: anexos.md  cliente.md  contatos.md  contrato.md  deficiencias.md  enderecos.md  permissoes_rbac.md  soft_delete.md
docs/referencia/rh/: alocacao.md  cargo_documento.md  cargos.md  funcionarios.md
docs/referencia/sst/: epi.md  saude_ocupacional.md
docs/rh/: cargos.md  dependentes.md  equipes.md  funcionarios.md
docs/sst/: saude_ocupacional.md
src/sigflor_server/apps/autenticacao/: admin.py  backends.py
src/sigflor_server/apps/comum/: admin.py  permissions.py  registro_enums.py  urls.py
src/sigflor_server/apps/rh/: admin.py  apps.py  urls.py
src/sigflor_server/apps/sst/: admin.py  urls.py
src/sigflor_server/core/: exceptions.py  settings.py  urls.py
(+185 files in other folders)
